--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </main>
 
     <aside>
-        <img src="C:\Users\Nisa Nur Azmi\OneDrive\Documents\dicoding\profile.jpg"
+        <img src="images/profile.jpg"
              alt="Foto profil pemilik website">
 
         <h2>Biodata Saya</h2>
