ganti struktur file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil Sederhana</title>
-    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -36,7 +36,7 @@
     </main>
 
     <aside>
-        <img src="images/profile.jpg"
+        <img src="images/profile.jpg">
              alt="Foto profil pemilik website">
 
         <h2>Biodata Saya</h2>
